@@ -530,6 +530,8 @@ struct _Evas_Object
       Evas_Render_Op        render_op : 4;
 
       Eina_Bool             valid_bounding_box : 1;
+      Eina_Bool             cached_surface : 1;
+      Eina_Bool             parent_cached_surface : 1;
    } cur, prev;
 
    char                       *name;
@@ -570,6 +572,8 @@ struct _Evas_Object
 #endif
 
    Evas_Size_Hints            *size_hints;
+
+   RGBA_Map                   *spans;
 
    int                         last_mouse_down_counter;
    int                         last_mouse_up_counter;
@@ -1051,6 +1055,7 @@ void evas_render_object_recalc(Evas_Object *obj);
 
 Eina_Bool evas_map_inside_get(const Evas_Map *m, Evas_Coord x, Evas_Coord y);
 Eina_Bool evas_map_coords_get(const Evas_Map *m, Evas_Coord x, Evas_Coord y, Evas_Coord *mx, Evas_Coord *my, int grab);
+void evas_object_map_update(Evas_Object *obj, int x, int y, int imagew, int imageh, int uvw, int uvh);
 
 Eina_List *evas_module_engine_list(void);
 
